Added flexbox styling to the comments text field and submit button.
Moved inline styling of the comment display text div to the project-detail.css file.

Fixed defect in application around user functionality/user experience by adding the missing add project button to the home page sidebar and changing project.new state parent view to be home from project-detail so that when a user logs into the application for the first time, they can create a project then view detail after by selecting it from sidebar.

--- a/src/main/webapp/app/entities/project/project-detail.html
+++ b/src/main/webapp/app/entities/project/project-detail.html
@@ -291,7 +291,7 @@
 
                                 <h4 class="modal-title" id="myCommentLabel">Leave a comment</h4>
                             </div>
-                            <div>
+                            <div class="comment-field-submit">
                                 <div class="input-group" style="display: inline-block">
                                     <i class="fa fa-comments-o fa-2x hidden-md" aria-hidden="true"></i>&nbsp
                                     <label class="control-label" for="field_comment"></label>
@@ -317,7 +317,7 @@
                         <br>
                         <small><b>{{comment.usercomment.login}}</b> on {{comment.date | date:shortDate}} </small>
                         <br>
-                        <div style="padding-left: 20px; padding-right: 20px">
+                        <div id="comments">
                             {{comment.commenttext | limitTo: 500}}
                         </div>
                     </td>
