--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -84,7 +84,7 @@
         </div>
     </div>
     <div class="col-md-10" style="background-color: white; height: 100%">
-        <h3 style="text-align: center; color: grey;">My Dashboard</h3>
+        <h3 style="text-align: center; color: grey;">{{vm.account.firstName}}'s Dashboard</h3>
         <div class="dashboard">
             <div class="current-projects">
                 <div class="projects-container">
@@ -92,9 +92,9 @@
                     <div id="project-name-list" class="collapse">
                         <!-- Create a collapseable bar that when clicked shows project detail list -->
                         <div class="project-detail" ng-repeat="project in vm.myProjects track by project.id">
-                        <div>Name: {{project.name}}</div>
-                        <div>Description: {{project.description}}</div>
-                    </div>
+                            <div>Name: {{project.name}}</div>
+                            <div>Description: {{project.description}}</div>
+                        </div>
                     </div>
                 </div>
             </div>
