Fixed application in production
Replaced heroku app
Fixed pom file
Fixed user registration
Fixed missing data on login/logout
new heroic URL
https://eztrackapp.herokuapp.com/#/

--- a/src/main/webapp/app/account/register/register.html
+++ b/src/main/webapp/app/account/register/register.html
@@ -2,10 +2,9 @@
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <h1>Registration</h1>
-            {{vm.registerAccount}}
 
             <div class="alert alert-success" ng-show="vm.success">
-                <strong>Registration saved!</strong> Please check your email for confirmation.
+                <strong>Registration saved!</strong> You may now log in
             </div>
 
             <div class="alert alert-danger" ng-show="vm.error">
@@ -115,10 +114,6 @@
 
                 <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Register</button>
             </form>
-            <p></p>
-            <div class="alert alert-warning">
-                If you want to <a class="alert-link" href="" ng-click="vm.login()">sign in</a>, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").
-            </div>
         </div>
     </div>
 </div>
