--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="content/css/home-screen.css">
 <div class="wrapper">
 <div ng-show="!vm.isAuthenticated()">
     <div class="container-fluid bg-1 text-center margin-1" >
@@ -151,4 +150,4 @@
     </div>
 
 </div>
-
+</div>
