--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css">
     <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/ripples.css">
     <!-- endinject -->
+    <link rel="stylesheet" href="content/css/project-detail.css">
+    <link rel="stylesheet" href="content/css/home-screen.css">
     <!-- endbuild -->
     <!-- build:css content/css/main.css -->
     <link rel="stylesheet" href="content/css/main.css">
