UI and login fix

--- a/src/main/webapp/app/account/register/register.html
+++ b/src/main/webapp/app/account/register/register.html
@@ -1,4 +1,4 @@
-<div>
+<div style="background-color: #FFFFFF">
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <h1>Registration</h1>
