--- a/src/main/webapp/app/entities/requirement/requirements.html
+++ b/src/main/webapp/app/entities/requirement/requirements.html
@@ -1,4 +1,4 @@
-<div>
+<div style="background-color: #FFFFFF">
     <h2>Requirements</h2>
     <jhi-alert></jhi-alert>
         <div class="container-fluid">
