--- a/src/main/webapp/app/entities/userstory/userstory-detail.html
+++ b/src/main/webapp/app/entities/userstory/userstory-detail.html
@@ -1,9 +1,12 @@
 
 <div>
-    <h2><span>Userstory</span> {{vm.userstory.id}}</h2>
+    <div class=" entity-detail-header">
+    <h2><span>{{vm.userstory.title}}</span></h2>
+    </div>
+    <h3><span>Userstory</span> {{vm.userstory.id}}</h3>
     <hr>
     <jhi-alert-error></jhi-alert-error>
-    <dl class="row jh-entity-details">
+    <dl class="row jh-entity-details dl-horizontal">
         <dt><span>Title</span></dt>
         <dd>
             <span>{{vm.userstory.title}}</span>
