--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,6 +16,7 @@
     <!-- endinject -->
     <link rel="stylesheet" href="content/css/project-detail.css">
     <link rel="stylesheet" href="content/css/home-screen.css">
+    <link rel="stylesheet" href="content/css/entity-detail.css">
     <!-- endbuild -->
     <!-- build:css content/css/main.css -->
     <link rel="stylesheet" href="content/css/main.css">
